Dacillo Monique.html

--- a/Dacillo Monique.html
+++ b/Dacillo Monique.html
@@ -3,8 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web-1C</title>
+    <title>Web Development</title>
 </head>
 <body>
     <h6>Name: Dacillo, Monique Jeztel L.</h6>
