Dacillo Monique.html

--- a/Dacillo Monique.html
+++ b/Dacillo Monique.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h6>Name: Dacillo, Monique Jeztel L.</h6>
-    <h6>>Address: Bang-bang Cordova, Cebu</h6>
+    <h6>Address: Bang-bang Cordova, Cebu</h6>
     <h6>Gender: Female</h6>
     <h6> Describe Yourself: I am a student that want to improve my skills and i enjoy learning this code.</h6>
 
